compiler/typ/tests/fixtures/diagnostics/0042_core_function_application_mismatch_04.ml.infer.expected
File "0042_core_function_application_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0042_core_function_application_mismatch_04 is not a valid module name.

File "0042_core_function_application_mismatch_04.ml", line 2, characters 22-23:
2 | let _ = consume_delta 0
                          ^
Error: The constant 0 has type int but an expression was expected of type
         bool
