compiler/typ/tests/fixtures/diagnostics/0042_core_function_application_mismatch_04.ml
let consume_delta (x : bool) : bool = x
let _ = consume_delta 0
